--- a/pom.xml
+++ b/pom.xml
@@ -64,5 +64,11 @@
 			</plugin>
 		</plugins>
 	</build>
-
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub Packages</name>
+			<url>https://maven.pkg.github.com/sagarkumar/todoapp</url>
+		</repository>
+	</distributionManagement>
 </project>
